/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.versions)
    alias(libs.plugins.dependency.check)
    id("jacoco")
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Spring Boot Core (using bundle)
    implementation(libs.bundles.spring.boot.core)
    
    // Spring Boot Actuator for health checks and metrics
    implementation(libs.spring.boot.starter.actuator)
    
    // Database
    implementation(libs.postgresql)
    runtimeOnly(libs.h2)
    
    // Lombok - using version catalog
    compileOnly(libs.lombok)
    annotationProcessor(libs.lombok)
    
    // OpenAPI/Swagger Documentation
    implementation(libs.springdoc.openapi.starter.webmvc.ui)
    
    // Observability - Prometheus metrics
    implementation(libs.micrometer.registry.prometheus)

    // Testing (using bundle)
    testImplementation(libs.bundles.testing)
    testImplementation(libs.bundles.testcontainers.full)
    testImplementation(libs.rest.assured)
    testRuntimeOnly(libs.junit.platform.launcher)

    // Utilities
    implementation(libs.guava)
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = "com.company.tasksapi.TasksApiApplication"
}

tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
    finalizedBy(tasks.jacocoTestReport)
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        xml.required.set(true)
        html.required.set(true)
        csv.required.set(false)
    }
    finalizedBy(tasks.jacocoTestCoverageVerification)
}

tasks.jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = "1.00".toBigDecimal() // 100% coverage required
            }
        }
        rule {
            element = "CLASS"
            limit {
                minimum = "1.00".toBigDecimal()
            }
        }
    }
}

// Configure Gradle Versions Plugin to check for dependency updates
tasks.withType<com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask> {
    // Disable configuration cache for this task due to compatibility issues with Gradle 9.2
    notCompatibleWithConfigurationCache("Uses project at execution time")
    
    rejectVersionIf {
        isNonStable(candidate.version)
    }
    
    checkForGradleUpdate = true
    outputFormatter = "html"
    outputDir = "build/dependencyUpdates"
    reportfileName = "report"
}

fun isNonStable(version: String): Boolean {
    val stableKeyword = listOf("RELEASE", "FINAL", "GA").any { 
        version.uppercase().contains(it)
    }
    val regex = "^[0-9,.v-]+(-r)?$".toRegex()
    val isStable = stableKeyword || regex.matches(version)
    return !isStable
}

// Configure OWASP Dependency Check for security vulnerabilities  
// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/
dependencyCheck {
    formats = listOf("HTML", "JSON", "XML")
    failBuildOnCVSS = 7.0f // Fail build if critical vulnerabilities found (CVSS >= 7.0)
    suppressionFile = "${project.rootDir}/dependency-check-suppression.xml"
    
    // Disable .NET related analyzers (not needed for Java projects)
    analyzers.assemblyEnabled = false
    analyzers.nuspecEnabled = false
    analyzers.nugetconfEnabled = false
}

// Add dependency check to the check task (commented out by default for faster builds)
// Uncomment to run security checks on every build
// tasks.check {
//     dependsOn(tasks.named("dependencyCheckAnalyze"))
// }
